# 3dplayground

./: CMakeLists.txt  CMakePresets.json
apps/: CMakeLists.txt
apps/ogreScene/: CMakeLists.txt  PointSprites.cpp  resources.cfg
data/: plugins.cfg  resources.cfg
libs/sampleLib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/Sample/: SampleTests.cpp
